5 files modified, 1 added

--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@angular/platform-browser": "8.0.0",
     "@angular/platform-browser-dynamic": "8.0.0",
     "@angular/router": "8.0.0",
-    "bootstrap": "^4.3.1",
+    "angular-datatables": "^8.0.0",
+    "bootstrap": "4.3.1",
     "core-js": "2.6.9",
-    "jquery": ">=3.4.0",
-    "popper.js": "^1.14.7",
+    "datatables.net": "^1.10.19",
+    "datatables.net-dt": "2.1.1",
+    "jquery": "3.4.1",
+    "popper.js": "1.16.0",
     "rxjs": "6.5.2",
     "zone.js": "0.9.1"
   },
